rewrote schedule page css for a responsive design fixed a number of bugs on schedule page where content was getting cut off at certain screen sizes

--- a/2012/sass/schedule.scss
+++ b/2012/sass/schedule.scss
@@ -1,50 +1,109 @@
 section#schedule{
   
-  h2, h3{ text-align: center; margin-top: 80px;}
+  h2, h3{ text-align: left; margin: 40px 110px 0 110px;}
   
   ul{
     display: block;
-    width: 100px;
-    margin: 10px auto;
+    width: 25%;
+    margin: 10px 0;
     padding: 10px 0;
-    @include border-radius(50px);
     color: $primary-color;
     background: rgba($black,0.6);
     font-size: 16px;
+    @include border-radius(0 50px 50px 0);
+    @include transition-duration(2s);
     
     li{
       list-style: none;
       margin: 0;
-      padding: 30px 0;
+      padding: 60px 0;
       position: relative;
       height: 20px;
       line-height: 20px;
       border-bottom: solid 1px $x-dark-gray;
+      @include transition-duration(2s);
       
       span.time{display: block; text-align: center;}
+      &.single{padding: 30px 0;}
       &.break{
         background: $white;
         padding: 10px 0;
         height: 40px;
       }
       &:last-child{border: none;}
+      &.no-speaker span.track1{top: 30px;}
       
       span.track1, span.track2{
         padding: 0 10px;
         display: block;
         position: absolute;
-        width: 400px;
-        left: -420px;
+        width: 300%;
+        left: 100%;
         top: 20px;
-        text-align: right;
+        text-align: left;
         color: $white;
       }
       
-      span.track2{left: auto; right: -420px; text-align: left;}
+      span.track2{ top: 80px;}
       
       strong, em{display: block; font-weight: normal; font-style: normal;}
       strong{color: $highlight-color;}
       em{color: $black;}
+    }
+  }
+}
+
+@media screen and (max-width: 800px) {
+  span.track1, span.track2{
+    position: relative;
+    strong, em{padding-left: 30px;}
+
+    strong:before{
+      content: "1";
+      display: inline-block;
+      position: absolute;
+      left: 10px;
+      width: 24px;
+      height: 24px;
+      text-align: center;
+      line-height: 26px;
+      @include border-radius(20px);
+      background: rgba($black, 0.5);
+    }
+  }
+  
+  span.track2 strong:before{content: "2";}
+  
+  li.single{
+    span.track1, span.track2{
+      strong, em{padding-left: 0;}
+
+      strong:before{
+        content: "";
+        width: 0;
+        height: 0;
+        margin: 0;
+      }
+    }
+  } 
+}
+
+@media screen and (min-width: 800px) {
+  section#schedule{
+    h2, h3{ text-align: center;}
+    
+    ul{
+      @include border-radius(100px);
+      width: 12.5%;
+      margin: 10px auto;
+      
+      li{
+        padding: 30px 0;
+        
+        span.track1, span.track2{width: 330%;}
+        span.track1{left: auto; right: 100%; text-align: right;}
+        span.track2{top: 20px;}
+      }
     }
   }
 }
